--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,10 +25,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.custom-menu {
-  display: inline-block;
-  align-items: center;
+a {
+  text-decoration: none !important;
 }
+
 
 .custom-menu .ant-menu-item {
   background-color: transparent !important;
@@ -38,7 +38,6 @@ body {
 .custom-menu .ant-menu-item:hover {
   background-color: transparent !important;
   color: #f0f0f0 !important;
-  display: inline-block !important;
   justify-items: center !important;
   align-items: center !important;
 }
@@ -51,8 +50,19 @@ body {
 .custom-account {
   margin-top: 15px;
   align-content: center !important;
+  color: white !important;
 }
 
 .custom-ant-menu {
   color: green !important;
+}
+
+.custom-ant-menu a:hover{
+  color: #000;
+}
+
+.ant-menu-submenu-title a
+{
+  color: black;
+  
 }
