--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,8 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
+  margin: 0;
 }
 
 a {
@@ -57,12 +59,17 @@ a {
   color: green !important;
 }
 
-.custom-ant-menu a:hover{
+.custom-ant-menu a:hover {
   color: #000;
 }
 
-.ant-menu-submenu-title a
-{
+.ant-menu-submenu-title a {
   color: black;
-  
+
+}
+
+.custom-footer {
+  margin: 0 30 15 30;
+  align-items: center;
+  padding: 10px;
 }
